--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -75,7 +75,7 @@ DIV.hero-unit.header H3 {
 }
 
 DIV.fish {
-  background-image: url('assets/img/logo.png');
+  background-image: url('../img/logo.png');
   background-repeat: no-repeat;
   height: 185px;
   width: 218px;
