--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -51,7 +51,7 @@ DIV.hero-unit.header H3 {
 }
 
 .icon-stopwatch {
-  background-image: url('assets/img/stopwatch_icon.png');
+  background-image: url('../img/stopwatch_icon.png');
   background-repeat: no-repeat;
   background-position: 1px 1px;
   height: 28px;
@@ -59,7 +59,7 @@ DIV.hero-unit.header H3 {
 }
 
 .icon-group {
-  background-image: url('assets/img/group_icon.png');
+  background-image: url('../img/group_icon.png');
   background-repeat: no-repeat;
   background-position: 1px 1px;
   height: 23px;
@@ -67,7 +67,7 @@ DIV.hero-unit.header H3 {
 }
 
 .icon-charts {
-  background-image: url('assets/img/charts_icon.png');
+  background-image: url('../img/charts_icon.png');
   background-repeat: no-repeat;
   background-position: 1px 1px;
   height: 25px;
@@ -84,7 +84,7 @@ DIV.fish {
 }
 
 DIV.header {
-  background-image: url('assets/img/header_bg_repeat.gif');
+  background-image: url('../img/header_bg_repeat.gif');
   background-position: 0 44px;
   background-repeat: repeat;
   padding-bottom: 0px;
@@ -103,12 +103,12 @@ DIV.headerBox {
 DIV.downloadButton {
   display: block;
   text-shadow: 0 1px 3px black;
-  background-image: url('assets/img/btn_download_w_icon.png');
+  background-image: url('../img/btn_download_w_icon.png');
   background-repeat: no-repeat;
 }
 
 A.myBtn {
-  background-image: url('assets/img/btn_download_w_icon.png') !important;
+  background-image: url('../img/btn_download_w_icon.png') !important;
   border: none;
   background-position: -2px -3px;
   margin-top: 25px;
@@ -156,7 +156,7 @@ DIV.span6 .span3 {
 }
 
 DIV.headContainer {
-  background-image: url('assets/img/header_bg.jpg');
+  background-image: url('../img/header_bg.jpg');
   background-repeat: no-repeat;
   height: 300px;
 }
@@ -178,7 +178,7 @@ DIV.bottomRow {
 
 DIV.teaserImageOne {
   margin-left: 33%;
-  background-image: url('assets/img/icon_business.gif');
+  background-image: url('../img/icon_business.gif');
   background-repeat: none;
   width: 103px;
   height: 103px;
@@ -186,7 +186,7 @@ DIV.teaserImageOne {
 
 DIV.teaserImageTwo {
   margin-left: 33%;
-  background-image: url('assets/img/icon_developer.gif');
+  background-image: url('../img/icon_developer.gif');
   background-repeat: none;
   width: 103px;
   height: 103px;
@@ -194,7 +194,7 @@ DIV.teaserImageTwo {
 
 DIV.teaserImageThree {
   margin-left: 33%;
-  background-image: url('assets/img/icon_user.gif');
+  background-image: url('../img/icon_user.gif');
   background-repeat: none;
   width: 103px;
   height: 103px;
@@ -283,7 +283,7 @@ DIV.footerLinks LI {
 DIV.copyWrapper {
   float: right;
   background-color: @lightGrey;
-  background-image: url('assets/img/footer_bg.gif');
+  background-image: url('../img/footer_bg.gif');
   background-repeat: no-repeat;
   height: 90px;
   width: 416px;
