--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
           <li>|</li>
 
           <li>
-            <a href="">Github Project</a>
+            <a href="http://github.com/mskgmbh/elbfisch">Github Project</a>
           </li>
 
           <li>|</li>
