--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
       </a>
         <ul class="nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">Github Project</a></li>
+          <li><a href="http://github.com/mskgmbh/elbfisch">Github Project</a></li>
           <li><a href="#contact">NavPoint 1</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">NavPoint 2 <b class="caret"></b></a>
