--- a/_includes/container.html
+++ b/_includes/container.html
@@ -14,7 +14,7 @@
 
     <div class="span4 downloadContainer offset1">
 
-      <a class="btn btn-primary btn-large btn-warning myBtn">
+      <a class="btn btn-primary btn-large btn-warning myBtn" href="http://github.com/mskgmbh/elbfisch/zipball/master">
         Download Elbfisch
         <i class="icon-align-right icon-arrow-down icon-white" style="margin-left: 5px; margin-top: 5px;"></i>
       </a>
