--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -112,10 +112,16 @@ A.myBtn {
   border: none;
   background-position: -2px -3px;
   margin-top: 25px;
+  font-size: 21px;
 }
 
 A.btn:hover {
   background-position: -2px -3px;
+}
+
+DIV.bottomRow P,
+DIV.topRow P {
+  font-family: Arial;
 }
 
 DIV.footer {
