--- a/_includes/topRow.html
+++ b/_includes/topRow.html
@@ -13,6 +13,31 @@
     von komplexen Automatisierungsaufgaben auf preiswerten Hardware-Plattformen in
     Java ermöglicht.
   </p>
+  <p>
+    Wir geben dieses Projekt nun an die OpenSource Community ab.
+    Wir tun dies mit Dank an die vielen Leute und Unternehmen, die bereits seit 
+    Jahren ihr Wissen und ihre Produkte mit Anderen teilen.
+    Wir selbst nutzen OpenSource-Produkte seit vielen Jahren. Jetzt ist der 
+    Zeitpunkt gekommen, unsererseits ein gutes Stück unseres Wissens der Community 
+    zur Verfügung zu stellen. Möge diese Arbeit für viele von Nutzen sein - und möge 
+    sie zum Frieden auf der Welt beitragen.
+    Letzteres weniger durch ihren Inhalt als vielmehr durch die Art und Weise, wie 
+    Menschen in diesem Projekt zusammenarbeiten –
+    in gegenseitiger Achtung, mit dem nötigen Respekt für die Sichtweisen Anderer 
+    und in Anerkennung des Wunsches eines jeden, mit seiner Arbeit einen Beitrag für 
+    eine bessere Welt zu leisten – unabhängig von seiner Herkunft und Religion, 
+    jeder nach seinen Möglichkeiten jeder mit dem Einsatz den er bereit ist, in die 
+    Sache zu investieren.
+    Elbfisch ist im Rahmen verschiedener Projekte unserer professionellen Arbeit 
+    entstanden und umfasst eine Reihe von Funktionen,
+    die uns innerhalb unseres Horizontes nützlich erscheinen. Möge Elbfisch über 
+    diesen Horizont hinauswachsen, bereichert um die Sichtweisen anderer, ergänzt um 
+    Funktionen, die seinen Anwendungsspektrum erweitern.
+  </p>
+  <p>
+    <strong>Bernd Schuster</strong><br />
+    MSK Gesellschaft für Automatisierung mbH
+  </p>
 </div>
 
 <!-- wide box on top -->
@@ -28,72 +53,74 @@
   </p>
 
 
-<!-- quad boxes -->
-<div class="span3 fourBox">
-  <h3><i class="icon-group"></i><a class="specialColor">Modularität</a></h3>
-  <p>
-    Die Konzeption von Elbfisch basiert auf dem Grundgedanken, dass eine
-    Automatisierungapplikation ein Abbild des Prozesses
-    darstellen muss, den sie steuert. Ein Prozess (eine Anlage) besteht aus
-    Aggregaten die untereinander in Wechselwirkung stehen
-    und wiederum selbst aus untergeordneten Aggregaten bestehen können. Eine solche
-    hierarchische Anordnung von Aggregaten kann mit Hilfe von Elbfisch-Modulen
-    abgebildet werden.
-    Module können unabhängig voneinander implementiert werden, besitzen definierte,
-    seiteneffektfreie Schnittstellen und sind, soweit
-    allgemeingültig implementiert in beliebigen Implementierungen wiederverwendbar.
-  </p>
-</div>
+  <!-- quad boxes -->
+  <div class="row">
+    <div class="span3 fourBox">
+      <h3><i class="icon-group"></i><a class="specialColor">Modularität</a></h3>
+      <p>
+        Die Konzeption von Elbfisch basiert auf dem Grundgedanken, dass eine
+        Automatisierungapplikation ein Abbild des Prozesses
+        darstellen muss, den sie steuert. Ein Prozess (eine Anlage) besteht aus
+        Aggregaten die untereinander in Wechselwirkung stehen
+        und wiederum selbst aus untergeordneten Aggregaten bestehen können. Eine solche
+        hierarchische Anordnung von Aggregaten kann mit Hilfe von Elbfisch-Modulen
+        abgebildet werden.
+        Module können unabhängig voneinander implementiert werden, besitzen definierte,
+        seiteneffektfreie Schnittstellen und sind, soweit
+        allgemeingültig implementiert in beliebigen Implementierungen wiederverwendbar.
+      </p>
+    </div>
 
-<div class="span3 fourBox">
-  <h3><i class="icon-charts"></i><a class="specialColor">Geordneter Informationsaustausch</a></h3>
-  <p>
-    Sowie Aggregate in einer zu automatisierenden Anlage untereinander in
-    Wechselwirkung treten, so müssen auch die diese repräsentierenden
-    Elbfisch-Module untereinander Informationen austauschen. Elbfisch stellt hierzu
-    des Konzept der Signale zur Verfügung. Ein Modul nimmt Informationen von anderen
-    Modulen über Signale entgegen und stellt anderen Modulen selbst Informationen
-    über Signale zur Verfügung.
-  </p>
-</div>
+    <div class="span3 fourBox">
+      <h3><i class="icon-charts"></i><a class="specialColor">Geordneter Informationsaustausch</a></h3>
+      <p>
+        Sowie Aggregate in einer zu automatisierenden Anlage untereinander in
+        Wechselwirkung treten, so müssen auch die diese repräsentierenden
+        Elbfisch-Module untereinander Informationen austauschen. Elbfisch stellt hierzu
+        des Konzept der Signale zur Verfügung. Ein Modul nimmt Informationen von anderen
+        Modulen über Signale entgegen und stellt anderen Modulen selbst Informationen
+        über Signale zur Verfügung.
+      </p>
+    </div>
+  </div>
 
+  <!-- quad boxes -->
+  <div class="row">
+    <div class="span3 fourBox">
+      <h3><i class="icon-stopwatch"></i><a class="specialColor">Verarbeitung von Prozessereignissen</a></h3>
+      <p>
+        Ein wesentliches Feature von Elbfisch besteht in der Möglichkeit für Module, auf
+        Prozessereignisse zu reagieren und diese zu verarbeiten. Die Vielfalt möglicher
+        Prozessereignisse ist unbegrenzt. Diese können z.B. sein: Ablauf einer Zeit,
+        Eintreten eines
+        Signalwechsel auf einer Eingangsklemme, Überschreitung eines analogen Wertes,
+        kombinatorische Ereignisse, Nichteintreten eines
+        Ereignisses innerhalb einer Zeit, Notaus-Situationen, Abschaltung einer Anlage etc..
+        Module können explizit auf das Eintreten von Ereignissen warten und werden dann
+        von Elbfisch aktiviert.
+      </p>
+    </div>
 
+    <div class="span3 fourBox">
+      <h3><i class="icon-charts"></i><a class="specialColor">Synchrones Design</a></h3>
+      <p>
+        Elbfisch steuert die Module einer Applikation, auftretende Ereignisse und den
+        Austausch von Signalen über ein Zeitscheibenverfahren (Zyklus). Z.B werden
+        Änderungen eines Signals durch ein Modul erst im nächsten Zyklus an alle
+        verbrauchenden Module weitergeleitet. Auf diese Weise bleiben alle
+        Eingangssignale für alle Module innerhalb eines Zyklus unveränderlich und damit
+        konsistent. Damit ist die Wechselwirkungsfreiheit des Ablaufs der Module
+        sichergestellt. Die Module können innerhalb eines Zyklus in beliebiger
+        Reihenfolge ablaufen, ja sich sogar gegenseitig unterbrechen. Die
+        auszutauschenden Signale bleiben in jedem Fall konsistent.
+      </p>
+    </div>
+  </div>
+  
+  <div class="socialBasic">
 
-<!-- quad boxes -->
-<div class="span3 fourBox">
-  <h3><i class="icon-stopwatch"></i><a class="specialColor">Verarbeitung von Prozessereignissen</a></h3>
-  <p>
-    Ein wesentliches Feature von Elbfisch besteht in der Möglichkeit für Module, auf
-    Prozessereignisse zu reagieren und diese zu verarbeiten. Die Vielfalt möglicher
-    Prozessereignisse ist unbegrenzt. Diese können z.B. sein: Ablauf einer Zeit,
-    Eintreten eines
-    Signalwechsel auf einer Eingangsklemme, Überschreitung eines analogen Wertes,
-    kombinatorische Ereignisse, Nichteintreten eines
-    Ereignisses innerhalb einer Zeit, Notaus-Situationen, Abschaltung einer Anlage etc..
-    Module können explizit auf das Eintreten von Ereignissen warten und werden dann
-    von Elbfisch aktiviert.
-  </p>
-</div>
+    {% include basicSocialBar.html %}
 
-<div class="span3 fourBox">
-  <h3><i class="icon-charts"></i><a class="specialColor">Synchrones Design</a></h3>
-  <p>
-    Elbfisch steuert die Module einer Applikation, auftretende Ereignisse und den
-    Austausch von Signalen über ein Zeitscheibenverfahren (Zyklus). Z.B werden
-    Änderungen eines Signals durch ein Modul erst im nächsten Zyklus an alle
-    verbrauchenden Module weitergeleitet. Auf diese Weise bleiben alle
-    Eingangssignale für alle Module innerhalb eines Zyklus unveränderlich und damit
-    konsistent. Damit ist die Wechselwirkungsfreiheit des Ablaufs der Module
-    sichergestellt. Die Module können innerhalb eines Zyklus in beliebiger
-    Reihenfolge ablaufen, ja sich sogar gegenseitig unterbrechen. Die
-    auszutauschenden Signale bleiben in jedem Fall konsistent.
-  </p>
-</div>
-
-<div class="socialBasic">
-
-  {% include basicSocialBar.html %}
-
-</div>
+  </div>
 
 </div>
