--- a/_includes/topRow.html
+++ b/_includes/topRow.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="span3 fourBox">
-      <h3><i class="icon-charts"></i><a class="specialColor">Geordneter Informationsaustausch</a></h3>
+      <h3><i class="icon-charts"></i><a class="specialColor">Signale</a></h3>
       <p>
         Sowie Aggregate in einer zu automatisierenden Anlage untereinander in
         Wechselwirkung treten, so müssen auch die diese repräsentierenden
@@ -87,7 +87,7 @@
   <!-- quad boxes -->
   <div class="row">
     <div class="span3 fourBox">
-      <h3><i class="icon-stopwatch"></i><a class="specialColor">Verarbeitung von Prozessereignissen</a></h3>
+      <h3><i class="icon-stopwatch"></i><a class="specialColor">Prozessereignisse</a></h3>
       <p>
         Ein wesentliches Feature von Elbfisch besteht in der Möglichkeit für Module, auf
         Prozessereignisse zu reagieren und diese zu verarbeiten. Die Vielfalt möglicher
