--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,13 +22,13 @@
         <ul>
 
           <li>
-            <a href="">Home</a>
+            <a href="/">Home</a>
           </li>
 
           <li>|</li>
 
           <li>
-            <a href="http://github.com/mskgmbh/elbfisch">Github Project</a>
+            <a href="https://github.com/mskgmbh/elbfisch">Github Project</a>
           </li>
 
           <li>|</li>
