--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,22 +7,9 @@
         <span class="icon-bar"></span>
       </a>
         <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li><a href="http://github.com/mskgmbh/elbfisch">Github Project</a></li>
-          <li><a href="#contact">NavPoint 1</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">NavPoint 2 <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li class="nav-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
-          <li><a href="#">NavPoint 3</a></li>
+          <li><a href="https://github.com/mskgmbh/elbfisch/wiki/6-Schritte-zur-ersten-Elbfisch-Applikation">Getting Started</a></li>
         </ul>
       <div class="fish"></div>
     </div>
