--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -50,28 +50,33 @@ DIV.hero-unit.header H3 {
   margin-top: 19%;
 }
 
-.icon-stopwatch {
-  background-image: url('../img/stopwatch_icon.png');
-  background-repeat: no-repeat;
-  background-position: 1px 1px;
-  height: 28px;
-  width: 36px;
-}
-
-.icon-group {
-  background-image: url('../img/group_icon.png');
+.icon-module {
+  background-image: url('../img/icon_modules.png');
   background-repeat: no-repeat;
   background-position: 1px 1px;
   height: 23px;
   width: 37px;
 }
-
-.icon-charts {
-  background-image: url('../img/charts_icon.png');
+.icon-signal {
+  background-image: url('../img/icon_signal.png');
   background-repeat: no-repeat;
   background-position: 1px 1px;
   height: 25px;
   width: 28px;
+}
+.icon-gears {
+  background-image: url('../img/icon_gears.png');
+  background-repeat: no-repeat;
+  background-position: 1px 1px;
+  height: 28px;
+  width: 36px;
+}
+.icon-stopwatch {
+  background-image: url('../img/icon_synchron.png');
+  background-repeat: no-repeat;
+  background-position: 1px 1px;
+  height: 28px;
+  width: 36px;
 }
 
 DIV.fish {
