Style Fixes, Added Links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,7 +43,7 @@
 
       <div class="copyWrapper">
         <div class="copyright">
-          Icons from <a class="underscore">Glyphicons Free</a>, licensed under <a class="underscore">CC BY 3.0.</a>
+          Icons from <a href="http://glyphicons.com/" target="_blank" class="underscore">Glyphicons Free</a>, licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" class="underscore">CC BY 3.0.</a>
         </div>
       </div>
     </div>
