--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
-<div class="navbar navbar-inverse navbar-fixed-top navbarfixed">
-  <div class="navbar-inner navbarfixed">
-    <div class="container navbarfixed offset3">
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container pos-relative">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
