--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -34,6 +34,9 @@ BODY {
 DIV.navbar {
 /*  box-shadow: 0 2px 6px black;*/
 }
+DIV.pos-relative {
+  position: relative;
+}
 
 DIV.hero-unit.header{
   border-radius: 0px 0px 0px 0px;
@@ -84,7 +87,8 @@ DIV.fish {
   background-repeat: no-repeat;
   height: 185px;
   width: 218px;
-  float: right;
+  position: absolute;
+  right: 25px;
 }
 
 DIV.header {
@@ -216,10 +220,6 @@ DIV.gitHubTopBar {
 
 DIV.socialGitHubInner IFRAME {
   padding: 10px;
-}
-
-DIV.navbarfixed {
-  height: 6%;
 }
 
 DIV.socialBar {
