--- a/_includes/topRow.html
+++ b/_includes/topRow.html
@@ -56,7 +56,7 @@
   <!-- quad boxes -->
   <div class="row">
     <div class="span3 fourBox">
-      <h3><i class="icon-module"></i><a class="specialColor">Modularität</a></h3>
+      <h3 class="clearfix"><i class="icon-module"></i><a class="specialColor">Modularität</a></h3>
       <p>
         Die Konzeption von Elbfisch basiert auf dem Grundgedanken, dass eine
         Automatisierungapplikation ein Abbild des Prozesses
@@ -72,7 +72,7 @@
     </div>
 
     <div class="span3 fourBox">
-      <h3><i class="icon-signal"></i><a class="specialColor">Signale</a></h3>
+      <h3 class="clearfix"><i class="icon-signal"></i><a class="specialColor">Signale</a></h3>
       <p>
         Sowie Aggregate in einer zu automatisierenden Anlage untereinander in
         Wechselwirkung treten, so müssen auch die diese repräsentierenden
@@ -87,7 +87,7 @@
   <!-- quad boxes -->
   <div class="row">
     <div class="span3 fourBox">
-      <h3><i class="icon-gears"></i><a class="specialColor">Prozessereignisse</a></h3>
+      <h3 class="clearfix"><i class="icon-gears"></i><a class="specialColor">Prozessereignisse</a></h3>
       <p>
         Ein wesentliches Feature von Elbfisch besteht in der Möglichkeit für Module, auf
         Prozessereignisse zu reagieren und diese zu verarbeiten. Die Vielfalt möglicher
@@ -102,7 +102,7 @@
     </div>
 
     <div class="span3 fourBox">
-      <h3><i class="icon-stopwatch"></i><a class="specialColor">Synchrones Design</a></h3>
+      <h3 class="clearfix"><i class="icon-stopwatch"></i><a class="specialColor">Synchrones Design</a></h3>
       <p>
         Elbfisch steuert die Module einer Applikation, auftretende Ereignisse und den
         Austausch von Signalen über ein Zeitscheibenverfahren (Zyklus). Z.B werden
