--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -142,6 +142,8 @@ DIV.footer {
 A.specialColor, A.specialColor:hover {
   text-decoration: none;
   color: teal;
+  float: left;
+  display: block;
 }
 
 DIV.fourBox H3 {
@@ -154,7 +156,7 @@ DIV.fourBox P {
 }
 
 DIV.fourBox i {
-  margin-right: 20px;
+  float: left;
 }
 
 /*DIV.span3 {
