--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,12 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container pos-relative">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-        <ul class="nav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="http://github.com/mskgmbh/elbfisch">Github Project</a></li>
-          <li><a href="https://github.com/mskgmbh/elbfisch/wiki/6-Schritte-zur-ersten-Elbfisch-Applikation">Getting Started</a></li>
-        </ul>
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
+      <ul class="nav">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="http://github.com/mskgmbh/elbfisch">Github Project</a></li>
+        <li><a href="https://github.com/mskgmbh/elbfisch/wiki/6-Schritte-zur-ersten-Elbfisch-Applikation">Getting Started</a></li>
+      </ul>
       <div class="fish"></div>
     </div>
   </div>
