--- a/_layouts/imprint.html
+++ b/_layouts/imprint.html
@@ -16,8 +16,12 @@
     </script>
 
     {% include navbar.html %}
+    
+    {% include herounit.html %}
 
-    {% include imprint-container.html %}
+    {% include imprint.html %}
+    
+    {% include footer.html %}
 
     {% include scripts.html %}
   </body>
