--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -16,8 +16,12 @@
     </script>
 
     {% include navbar.html %}
+    
+    {% include herounit.html %}
 
-    {% include container.html %}
+    {% include homepage.html %}
+    
+    {% include footer.html %}
 
     {% include scripts.html %}
   </body>
