--- a/_includes/htmlhead.html
+++ b/_includes/htmlhead.html
@@ -1,12 +1,7 @@
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="author" content="Your Name" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet/less" type="text/css" href="assets/css/bootstrap.css">
-  <link rel="stylesheet/less" type="text/css" href="assets/css/bootstrap-responsive.css">
-  <link rel="stylesheet/less" type="text/css" href="assets/css/styles.less">
-
-  <script src="assets/js/less-1.3.0.min.js" type="text/javascript"></script>
-
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   <title>{{ page.title }}</title>
 </head>
