--- a/_includes/htmlhead.html
+++ b/_includes/htmlhead.html
@@ -1,7 +1,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/ssets/css/styles.css">
+  <link rel="shortcut icon" href="/favicon.ico">
   <title>{{ page.title }}</title>
 </head>
