--- a/_includes/navbar_en.html
+++ b/_includes/navbar_en.html
@@ -6,6 +6,7 @@
         <li class="active"><a href="/">Home</a></li>
         <li><a href="http://github.com/mskgmbh/elbfisch">Github Project</a></li>
         <li><a href="https://github.com/mskgmbh/elbfisch/wiki/6-Schritte-zur-ersten-Elbfisch-Applikation">Getting Started</a></li>
+        <li><a href="/index-de.html">German</a></li>
       </ul>
       <div class="fish"></div>
     </div>
