--- a/_layouts/layout_de.html
+++ b/_layouts/layout_de.html
@@ -15,13 +15,13 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
 
-    {% include navbar.html %}
+    {% include navbar_de.html %}
     
-    {% include herounit.html %}
+    {% include herounit_de.html %}
 
-    {% include homepage.html %}
+    {% include homepage_de.html %}
     
-    {% include footer.html %}
+    {% include footer_de.html %}
 
     {% include scripts.html %}
   </body>
