Changed language handling

--- a/_includes/de_homepage.html
+++ b/_includes/de_homepage.html
@@ -2,8 +2,7 @@
   <div class="row socialBar">
     <div class="span12">
       <div class="gitSocialInner pull-right">
-        <iframe src="/github-btn.html?user=mskgmbh&repo=elbfisch&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="85px" height="20px"></iframe>
-        <iframe src="/github-btn.html?user=mskgmbh&repo=elbfisch&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+        {% include githubsocial.html %}
       </div>
     </div>
   </div>
