--- a/_includes/herounit.html
+++ b/_includes/herounit.html
@@ -1,6 +1,6 @@
 <div class="hero-unit elbfischHeader">
   <div class="container">
-    <h3>Open-source runtime system for component-based implementation of automation solutions with Java</h3>
+    <h3>{{ page.headerText }}</h3>
     <a class="btn btn-large btn-warning btn-elbfisch-dl pull-right" href="http://github.com/mskgmbh/elbfisch/downloads">Download Elbfisch <i class="icon-align-right icon-arrow-down icon-white"></i></a>
   </div>
 </div>
