--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -15,13 +15,13 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
 
-    {% include navbar_en.html %}
+    {% include navbar.html %}
     
-    {% include herounit_en.html %}
+    {% include herounit.html %}
 
-    {% include homepage_en.html %}
+    {{ content }}
     
-    {% include footer_en.html %}
+    {% include footer.html %}
 
     {% include scripts.html %}
   </body>
