--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,10 +3,10 @@
     <div class="container pos-relative">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a>
       <ul class="nav">
-        <li class="active"><a href="/">Home</a></li>
+        <li class="active"><a href="{{ page.langHomeLink }}">Home</a></li>
         <li><a href="http://github.com/mskgmbh/elbfisch">Github Project</a></li>
         <li><a href="https://github.com/mskgmbh/elbfisch/wiki/6-Schritte-zur-ersten-Elbfisch-Applikation">Getting Started</a></li>
-        <li><a href="/index-de.html">German</a></li>
+        <li><a href="{{ page.changeLangLink }}">{{ page.changeLangLabel }}</a></li>
       </ul>
       <div class="fish"></div>
     </div>
