Fix HTML Errors

--- a/_includes/de_homepage.html
+++ b/_includes/de_homepage.html
@@ -8,7 +8,7 @@
   </div>
   <div class="row mainContent">
     <div class="span4">
-      <h3>Über <span class="hightlight">Elbfisch</h3>
+      <h3>Über <span class="hightlight">Elbfisch</span></h3>
       <p>
         Die zunehmende Etablierung von Embedded-PC-Systemen im Bereich der Automatisierungstechnik begünstigt den lange überfälligen Schritt, auch im industriellen Umfeld objektorientierte Softwareentwicklungsverfahren einzusetzen.
       </p>
@@ -26,7 +26,7 @@
     <div class="span8">
       <div class="row">
         <div class="span8">
-          <h3>Elbfisch <span class="hightlight">Funktionen</h3>
+          <h3>Elbfisch <span class="hightlight">Funktionen</span></h3>
           <p>
             Elbfisch stellt eine Laufzeitumgebung und einen Kanon von Grundfunktionen zur Verfügung, mit denen unter Nutzung weit verbreiteter OpenSource-Produkte, wie die integrierten Entwicklungsumgebungen "Netbeans" und "Eclipse", Linux als Betriebssystem, "git" als verteiltes Versionmanagementsystem die teambasierte Entwicklung objektorientierter Automatisierungapplikationen ermöglicht wird. Die Programmierung erfolgt in Java.
           </p>
@@ -34,13 +34,13 @@
       </div>
       <div class="row col2">
         <div class="span4">
-          <h3 class="glyphe glyphe-module"><span class="hightlight">Modularität</h3>
+          <h3 class="glyphe glyphe-module"><span class="hightlight">Modularität</span></h3>
           <p>
             Die Konzeption von Elbfisch basiert auf dem Grundgedanken, dass eine Automatisierungsapplikation ein Abbild des Prozesses darstellen muss, den sie steuert. Ein Prozess (eine Anlage) besteht aus Aggregaten die untereinander in Wechselwirkung stehen und wiederum selbst aus untergeordneten Aggregaten bestehen können. Eine solche hierarchische Anordnung von Aggregaten kann mit Hilfe von Elbfisch-Modulen abgebildet werden. Module können unabhängig voneinander implementiert werden, besitzen definierte, seiteneffektfreie Schnittstellen und sind, soweit allgemeingültig implementiert, in beliebigen Implementierungen wiederverwendbar.
           </p>
         </div>
         <div class="span4">
-          <h3 class="glyphe glyphe-signal"><span class="hightlight">Signale</h3>
+          <h3 class="glyphe glyphe-signal"><span class="hightlight">Signale</span></h3>
           <p>
             Sowie Aggregate in einer zu automatisierenden Anlage untereinander in Wechselwirkung treten, so müssen auch die diese repräsentierenden Elbfisch-Module untereinander Informationen austauschen. Elbfisch stellt hierzu des Konzept der Signale zur Verfügung. Ein Modul nimmt Informationen von anderen Modulen über Signale entgegen und stellt anderen Modulen selbst Informationen über Signale zur Verfügung.
           </p>
@@ -48,13 +48,13 @@
       </div>
       <div class="row col2">
         <div class="span4">
-          <h3 class="glyphe glyphe-gears"><span class="hightlight">Prozessereignisse</h3>
+          <h3 class="glyphe glyphe-gears"><span class="hightlight">Prozessereignisse</span></h3>
           <p>
             Ein wesentliches Feature von Elbfisch besteht in der Möglichkeit für Module, auf Prozessereignisse zu reagieren und diese zu verarbeiten. Die Vielfalt möglicher Prozessereignisse ist unbegrenzt. Diese können z.B. sein: Ablauf einer Zeit, Eintreten eines Signalwechsel auf einer Eingangsklemme, Überschreitung eines analogen Wertes, kombinatorische Ereignisse, Nichteintreten eines Ereignisses innerhalb einer Zeit, Notaus-Situationen, Abschaltung einer Anlage etc.. Module können explizit auf das Eintreten von Ereignissen warten und werden dann von Elbfisch aktiviert.
           </p>
         </div>
         <div class="span4">
-          <h3 class="glyphe glyphe-stopwatch"><span class="hightlight">Synchrones Design</h3>
+          <h3 class="glyphe glyphe-stopwatch"><span class="hightlight">Synchrones Design</span></h3>
           <p>
             Elbfisch steuert die Module einer Applikation, auftretende Ereignisse und den Austausch von Signalen über ein Zeitscheibenverfahren (Zyklus). Z.B. werden Änderungen eines Signals durch ein Modul erst im nächsten Zyklus an alle verbrauchenden Module weitergeleitet. Auf diese Weise bleiben alle Eingangssignale für alle Module innerhalb eines Zyklus unveränderlich und damit konsistent. Damit ist die Wechselwirkungsfreiheit des Ablaufs der Module sichergestellt. Die Module können innerhalb eines Zyklus in beliebiger Reihenfolge ablaufen, ja sich sogar gegenseitig unterbrechen. Die auszutauschenden Signale bleiben in jedem Fall konsistent.
           </p>
@@ -66,21 +66,21 @@
   <div class="row bottomTeaser">
     <div class="span4">
       <div class="teaser teaserCompany"></div>
-      <h3>Für <span class="hightlight">Firmen</h3>
+      <h3>Für <span class="hightlight">Firmen</span></h3>
       <p>
         Wir entwickeln für Sie auf Basis von Elbfisch maßgeschneiderte Lösungen, ob Bibliotheken/Treiber für ihre Hardware-Produkte, oder komplette Automatisierungsapplikationen für Ihre Projekte. Sprechen Sie uns an: <a href="mailto:info@elbfisch.org">info@elbfisch.org</a>
       </p>
     </div>
     <div class="span4">
       <div class="teaser teaserDeveloper"></div>
-      <h3>Für <span class="hightlight">Entwickler</h3>
+      <h3>Für <span class="hightlight">Entwickler</span></h3>
       <p>
         Es gibt viel zu tun! Schauen Sie im <a href="https://github.com/mskgmbh/elbfisch/wiki">Elbfisch-Wiki</a> nach. Finden Sie dort die Roadmap für die Fortentwicklung des Projekts. Oder haben Sie konkrete eigene Ideen? Lassen Sie uns diese wissen!
       </p>
     </div>
     <div class="span4">
       <div class="teaser teaserUser"></div>
-      <h3>Für <span class="hightlight">Anwender</h3>
+      <h3>Für <span class="hightlight">Anwender</span></h3>
       <p>
         Folgen Sie den einfachen Beispielen im <a href="https://github.com/mskgmbh/elbfisch/wiki">Elbfisch-Wiki</a>. Sie werden sehen, wie schnell Sie Ihre erste Elbfisch-Applikation geschrieben haben.
       </p>
