--- a/_includes/githubsocial.html
+++ b/_includes/githubsocial.html
@@ -1,2 +1,2 @@
-<iframe src="/github-btn.html?user=mskgmbh&repo=elbfisch&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="85px" height="20px"></iframe>
-<iframe src="/github-btn.html?user=mskgmbh&repo=elbfisch&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95px" height="20px"></iframe>
+<iframe src="/github-btn.html?user=mskgmbh&amp;repo=elbfisch&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
+<iframe src="/github-btn.html?user=mskgmbh&amp;repo=elbfisch&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
