--- a/_includes/htmlhead.html
+++ b/_includes/htmlhead.html
@@ -5,4 +5,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
   <link rel="shortcut icon" href="/favicon.ico">
   <title>{{ page.title }}</title>
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
