--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,11 +19,11 @@
     </div>
     <div class="row">
       <ul class="links pull-left">
-        <li><a href="{{ page.langHomeLink }}">Home</a></li>
+        <li><a href="{{ layout.langHomeLink }}">Home</a></li>
         <li> | </li>
         <li><a href="https://github.com/mskgmbh/elbfisch">GitHub Project</a></li>
         <li> | </li>
-        <li><a href="{{ page.imprintLink }}">{{ page.imprintLabel }}</a></li>
+        <li><a href="{{ layout.imprintLink }}">{{ layout.imprintLabel }}</a></li>
       </ul>
       <div class="copyNote pull-right">
         <div class="copy">
