download link updated
Signed-off-by: Bernd Schuster <schuster@mskgmbh.com>

--- a/_includes/herounit.html
+++ b/_includes/herounit.html
@@ -1,6 +1,6 @@
 <div class="hero-unit elbfischHeader">
   <div class="container">
     <h3>{{ page.headerText }}</h3>
-    <a class="btn btn-large btn-warning btn-elbfisch-dl pull-right" href="http://github.com/mskgmbh/elbfisch/downloads">Download Elbfisch <i class="icon-align-right icon-arrow-down icon-white"></i></a>
+    <a class="btn btn-large btn-warning btn-elbfisch-dl pull-right" href="https://github.com/mskgmbh/elbfisch/wiki/Elbfisch-V2x-Installation-guide">Download Elbfisch <i class="icon-align-right icon-arrow-down icon-white"></i></a>
   </div>
 </div>
